--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>My favorite things</title>
+
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
+
     </head>
     <body>
         <h1>MY FAVORITE THINGS</h1>
