--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -2,6 +2,7 @@
 <html>
     <head>  
         <title>My first webpage!</title>
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <h1>My First Webpage</h1>
@@ -19,6 +20,6 @@
         </ul>
         <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
         <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
-        <img src="images/elephant.jpg" alt="A photo of an elephant">
+        <img src="images/What-todo-Encounter-Elephant-BW_1200px" alt="A photo of an elephant">
     </body>
 </html>
